# willyard

./: Makefile  README.rst  pyproject.toml
tests/: test_diligent.py
willyard/worker/: exceptions.py  main.py
